centered text, added some background and border

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 *{
     color: #4aaaa5;
+    margin: 0 auto;
+}
+
+h1{
+    background: #666666;
+    border-width: 25px;
+    border-color: beige;
+
 }
